== Changelog ==

= 1.7.6 =
- Added: OceanWP SVG icons.
- Added: Custom body classes in page level setting #329
- Added: New social option in about me and social icon widget.

= 1.7.5 =
- Added: New demos
- Fixed: Demos images missing on the setup wizard
- Added: filter 'oe_icon_picker_image_mime_types_svg' to handle svg types.

= 1.7.4 =
- Updated: Freemius SDK version.
- Added: New demos

= 1.7.3 =
- Added: New demos

= 1.7.2 =
- Fixed: [oceanwp_login] shortcode: logout '404 page not found' error when WooCommerce enabled.
- Added: New shortcode to display the modified date on posts and pages: [oceanwp_last_modified]
- Added: New demos

= 1.7.1 =
- Added: New demos

= 1.7.0 =
- Fixed: PHP 8 compatibility with demo import.
- Added: New demo, Maria: https://maria.oceanwp.org/
- Added: New demo, Photos: https://photos.oceanwp.org/
- Updated: Freemius SDK version.

= 1.6.9 =
- Fixed: Demo import issue and Elementor page styling after import.

= 1.6.8 =
- Fixed: MailChimp Widget: failed subscription error.
- Fixed: WC_Cart->taxes is deprecated since version 3.2 error when oceanwp_woo_free_shipping_left shortcode is in use.
- Fixed: Broken demo images.

= 1.6.7 =
- Updated: Freemius SDK version.

= 1.6.6 =
- Fixed: Security issue - If $_REQUEST['_wpnonce'] is not set, it won't be checked.
- Fixed: Remove  5-star rating filter from review link.
- Fixed: PHP 7.4 notice - 'Trying to access array offset on value of type bool' in ocean-extra file.
- Fixed: jQuery notice - 'ready' function has been deprecated - metabox.js file.
- Updated: Freemius SDK version.

= 1.6.5 =
- Fixed: Data saving error - About Me widget.
- Removed: All affiliate links have been removed.

= 1.6.4 =
- Fixed: Missing Dependencies script 'butterbean'
- Fixed: Updated Mailchimp API
- Added: SEO Improvement - added "noopener noreferrer" tags when link opens in a new tab: Custom Links, About Me, Social Icons, Contact Info.