@@ -4,6 +4,7 @@
 - Added: OceanWP SVG icons.
 - Added: Custom body classes in page level setting #329
 - Added: New social option in about me and social icon widget.
+- Fixed: MaiNewsletter Widget - MailChimp failed subscription issue.
 
 = 1.7.5 =
 - Added: New demos
